objects/ar_qa_accobj__c.object
<CustomObject>
    <fields>
        <fullName>arsf_field1__c</fullName>
        <label>arsf-field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>arsf_field2__c</fullName>
        <label>arsf-field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pp_arsf_Field1__c</fullName>
        <description>Add pp-arsf-Field1</description>
        <label>pp-arsf-Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pp_arsf_field2__c</fullName>
        <label>pp-arsf-field2</label>
        <type>Email</type>
    </fields>
    <label>ar-qa-accobj1</label>
    <nameField>
        <label>ar-qa-accobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>arqaaccobj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>arqa_ValidationRule2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( arsf_field2__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>arsf_ValidationRule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( arsf_field1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pp_arsf_ValidationRule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( pp_arsf_Field1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pp_arsf_validationrule2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( pp_arsf_field2__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
</CustomObject>